--- a/src/componants/loginpage/Login.css
+++ b/src/componants/loginpage/Login.css
@@ -1,5 +1,163 @@
-.login{
-    width: 400px;
-    height: 300px;
-    background-color: aliceblue;
+.login {
+  margin-left: -510px;
+  width: 1390px;
+  height: 650px;
+  margin-top: -45px;
+  background-color: rgba(32, 32, 32, 0.767);
+  position: absolute;
+  z-index: 1000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.login-box {
+  width: 530px;
+  height: 380px;
+  background-color: rgb(0, 0, 0);
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  flex-direction: column;
+  border-radius: 8px;
+}
+
+.content {
+  width: 90%;
+  height: 250px;
+  /* background-color: #a52626; */
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
+#size1 {
+  width: 90%;
+  height: 35px;
+  border: 0;
+  outline: none;
+  border-radius: 2px;
+  border-color: #f0f2f5;
+  margin-top: 10px;
+  padding: 10px;
+  font-size: 15px;
+  font-family: "Times New Roman", Times, serif;
+  display: none;
+}
+.error-div {
+  /* background-color: aqua; */
+}
+#size2 {
+  padding: 10px;
+  width: 80%;
+  height: 50px;
+  border: 0;
+  border: 1px solid rgba(255, 255, 255, 0.781);
+  outline: none;
+  border-radius: 5px;
+  background-color: #000000;
+  border-color: #ffffff88;
+  margin-top: 10px;
+  font-size: 18px;
+  font-family: "Times New Roman", Times, serif;
+}
+#size3 {
+  padding: 10px;
+  font-size: 15px;
+  font-family: "Times New Roman", Times, serif;
+  width: 90%;
+  height: 35px;
+  display: none;
+  border: 0;
+  outline: none;
+  border-radius: 2px;
+  border-color: #f0f2f5;
+  margin-top: 10px;
+}
+
+#bt-1 {
+  font-weight: 600;
+  width: 300px;
+  height: 45px;
+  background-color: aqua;
+  border-radius: 5px;
+  border: 0;
+}
+
+.span {
+  display: none;
+  font-size: 13px;
+  color: red;
+}
+
+.checkbox-div {
+  width: 180px;
+  height: 30px;
+  /* background-color: aquamarine; */
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+.checkbox {
+  width: 20px;
+  height: 20px;
+  /* background-color: aqua; */
+  background-color: #000000;
+  color: aqua;
+}
+.checkbox-h6 {
+  color: white;
+  margin-top: 5px;
+}
+.login-ptag {
+  font-size: 13px;
+  color: white;
+  font-weight: 500;
+}
+.login-link {
+  color: aqua;
+}
+
+.btn-login-div {
+  width: 400px;
+  height: 80px;
+  /* background-color: aquamarine; */
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  flex-direction: column;
+}
+
+.login-sub-box {
+  width: 100%;
+  height: 70px;
+  /* background-color:rgb(4, 71, 49); */
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.crossbt {
+  height: 40px;
+  width: 40px;
+  border-radius: 50px;
+  margin-top: -10px;
+  margin-left: 15px;
+}
+.logo-cmpny-div {
+  margin-left: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 590px;
+  height: 100%;
+  /* background-color: #000000; */
+}
+.crss-div {
+  width: 60px;
+  height: 100%;
+  /* background-color: #a52626; */
+}
+.crss-btn {
+  background-color: #000000;
+  border: 0;
 }
