--- a/src/componants/loginpage/Login.css
+++ b/src/componants/loginpage/Login.css
@@ -3,7 +3,7 @@
   width: 1390px;
   height: 650px;
   margin-top: -45px;
-  background-color: rgba(32, 32, 32, 0.767);
+  background-color: rgba(31, 29, 29, 0.767);
   position: absolute;
   z-index: 1000;
   display: flex;
@@ -54,6 +54,7 @@
   border: 0;
   border: 1px solid rgba(255, 255, 255, 0.781);
   outline: none;
+  color: #f0f2f5;
   border-radius: 5px;
   background-color: #000000;
   border-color: #ffffff88;
