--- a/src/componants/home/Body.css
+++ b/src/componants/home/Body.css
@@ -3,7 +3,7 @@
   width: 100%;
   height: 58vh;
   display: flex;
-  align-items: end;
+  align-items: flex-end;
   justify-content: flex-start;
   background-color: rgb(0, 0, 0);
 }
