--- a/src/componants/home/Body.css
+++ b/src/componants/home/Body.css
@@ -15,27 +15,16 @@
   width: 100%;
 }
 
-
 /* -------------------------meadiaquery--------------------- */
-@media(max-width:500px){
-
-  .FirstBody{
+@media (max-width: 500px) {
+  .FirstBody {
     margin-top: 60px;
     height: 36vh;
-    background-color: rgb(24, 23, 23);  }
-  .body-img{
+    background-color: rgb(24, 23, 23);
+  }
+  .body-img {
     height: 220px;
   }
-
-
-
-
-
-
-
-
-
-
 }
 /* =======================================================scndbody============================================= */
 
@@ -140,68 +129,65 @@
   background-color: rgb(214, 64, 10);
 }
 
-
-
 /* --------------------MEDIAQIERYYY----------------------------- */
-@media(max-width:500px){
-  .SecondBody{
+@media (max-width: 500px) {
+  .SecondBody {
     /* background-color: aqua; */
     height: 220vh;
     justify-content: space-evenly;
   }
-  .scndbody-caro{
+  .scndbody-caro {
     /* background-color: black; */
     width: 90%;
     height: 130px;
     overflow: hidden;
   }
-  .carousle{
+  .carousle {
     /* background-color: cadetblue; */
   }
   .coro-map-div {
     /* background-color: blue; */
-   margin-left: 30px;
+    margin-left: 30px;
     width: 100px;
     height: 100px;
   }
-  .scnd-coro-img{
-    width:90px ;
+  .scnd-coro-img {
+    width: 90px;
     height: 100px;
   }
 
-
-
-  .scnd-menus-div{
+  .scnd-menus-div {
     justify-content: space-between;
     height: 88%;
     /* background-color: blue;  */
-    align-items: center; 
+    align-items: center;
   }
-  .menus-text{
+  .menus-text {
     font-size: 20px;
     margin-left: 10px;
   }
-  .menus-head-div{
-/* background-color: brown; */
+  .menus-head-div {
+    /* background-color: brown; */
     flex-direction: column;
     height: 96%;
   }
 
-  .menus-div{
+  .menus-div {
     width: 200px;
     height: 280px;
   }
-  .menus-img{
+  .menus-img {
     width: 200px;
     height: 160px;
   }
-  .menus-text,.menus-h3{
+  .menus-text,
+  .menus-h3,
+  .menus-btn {
     overflow: hidden;
   }
-
-
-
-
+  .menus-div:hover .menus-btn {
+    overflow: hidden;
+  }
 }
 /* ------------------------------------------------------THRDBODY------------------------------------------------- */
 
@@ -244,10 +230,36 @@
   margin-left: 10px;
 }
 
-
 /* ----------------------MEDIAQUERYYY===================== */
+@media (max-width: 500px) {
+  .ThrdBoy {
+    /* background-color: rgb(20, 73, 73); */
+    height: 60vh;
+    align-items: flex-start;
+    justify-content: flex-start;
+  }
 
-
+  .heighlt-div {
+    width: 100%;
+    height: 400px;
+    /* background-color: blue; */
+  }
+  .heiglts-text {
+    text-align: center;
+    font-size: 20px;
+  }
+  .heighlt-img-div {
+    height: 350px;
+    /* background-color: rgb(138, 112, 112); */
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .higlts-img {
+    margin-left: 3px;
+    width: 180px;
+    height: 90px;
+    border-radius: 2px;
+  }
+}
 
 /* ------------------------------------------------------ForthBODY------------------------------------------------- */
 
@@ -262,6 +274,22 @@
 .menus-img2 {
   width: 190px;
   height: 180px;
+}
+
+/* ----------MEDIAQUERY--------------------------- */
+
+@media (max-width: 500px) {
+  .ForthBody {
+    margin-top: -140px;
+    height: 210vh;
+    /* background-color: aqua; */
+    align-items: flex-end;
+    justify-content: center;
+  }
+  .menus-img2 {
+    width: 170px;
+    height: 150px;
+  }
 }
 
 /* ------------------------------------------------------FifthBODY------------------------------------------------- */
@@ -300,7 +328,7 @@
 .boult-img {
   width: 550px;
   height: 270px;
-  border-radius: 8px;
+  border-radius: 2px;
 }
 .fifth-jack-div {
   width: 85%;
@@ -314,6 +342,50 @@
   width: 260px;
   border-radius: 8px;
   height: 300px;
+  border-radius: 2px;
+}
+
+/* --------------MEADIAQUEARY---------------- */
+@media (max-width: 500px) {
+  .FifthBody {
+    height: 90vh;
+    margin-top: 0px;
+  }
+
+  .fifth-sub1-div {
+    height: 170px;
+    width: 100%;
+    /* background-color: blue; */
+  }
+  .fifth-text {
+    overflow: hidden;
+    text-align: center;
+  }
+  .boult-div {
+    height: 130px;
+    /* background-color: black; */
+  }
+  .boult-img {
+    width: 160px;
+    height: 100px;
+    border-radius: 2px;
+  }
+
+  .fifth-jack-div {
+    width: 100%;
+    height: 400px;
+    /* background-color: brown; */
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: auto;
+  }
+
+  .jack-img {
+    margin-left: 9px;
+    width: 170px;
+    border-radius: 2px;
+    height: 190px;
+  }
 }
 
 /* ------------------------------------------------FOOTER------------------------------------------------. */
@@ -353,4 +425,12 @@
 }
 .footer-p {
   color: white;
+}
+
+/* ==================MEDIAQUERY++++++++++++++++++ */
+
+@media (max-width: 500px) {
+  .Footer {
+    height: 25vh;
+  }
 }
