--- a/src/componants/home/Body.css
+++ b/src/componants/home/Body.css
@@ -26,6 +26,25 @@
     height: 220px;
   }
 }
+
+
+
+
+
+.caaaart{
+  width: 90%;
+  height: 100vh;
+  background-color: rgb(230, 96, 96);
+  position: absolute;
+}
+
+
+
+
+
+
+
+
 /* =======================================================scndbody============================================= */
 
 .SecondBody {
@@ -94,6 +113,9 @@
   flex-direction: column;
   background-color: rgb(10, 10, 10);
   border-radius: 8px;
+}
+.menus-div:hover{
+  border: 1px solid rgba(255, 255, 255, 0.151);
 }
 .menus-img {
   width: 240px;
