--- a/src/componants/home/Home.css
+++ b/src/componants/home/Home.css
@@ -37,7 +37,7 @@
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   font-size: 25px;
-  font-weight: 500;
+  font-weight: 800;
   font-family: "Times New Roman", Times, serif;
 }
 
@@ -72,11 +72,38 @@
   justify-content: center;
 }
 .cart-div {
+  text-decoration: none;
   width: 100px;
   height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
+}
+.login-div{
+  width: 100px;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.cart-items{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+.cart-add-span{
+  background-color: red;
+  color: white;
+  border-radius: 100px;
+  height: 15px;
+  font-size: 10px;
+  text-align: center;
+  width: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .cart-img {
   width: 25px;
