--- a/src/componants/loginpage/Login.css
+++ b/src/componants/loginpage/Login.css
@@ -3,7 +3,7 @@
   width: 1390px;
   height: 650px;
   margin-top: -45px;
-  background-color: rgba(31, 29, 29, 0.767);
+  background-color: rgba(12, 12, 12, 0.822);
   position: absolute;
   z-index: 1000;
   display: flex;
@@ -15,6 +15,7 @@
   width: 530px;
   height: 380px;
   background-color: rgb(0, 0, 0);
+  box-shadow: 0 0 2px aqua;
   display: flex;
   align-items: center;
   justify-content: space-evenly;
@@ -168,6 +169,8 @@
 
 
 /* -----------------------MEDIAQUERY------------------- */
+@media (max-width:500px){
+
 
 .login{
   /* margin-left: -255px; */
@@ -180,4 +183,5 @@
 }
 .login-box{
   display: none;
+}
 }
