--- a/src/componants/mobiles/mobiles.css
+++ b/src/componants/mobiles/mobiles.css
@@ -77,6 +77,9 @@
   justify-content: space-around;
   border-radius: 8px;
 }
+.mobile-box:hover{
+  border: 1px solid rgba(255, 255, 255, 0.233);
+}
 .mibile-imgg {
   width: 200px;
   height: 100%;
