--- a/src/componants/cart-folder/Cart.css
+++ b/src/componants/cart-folder/Cart.css
@@ -1,6 +1,6 @@
 .cart-body {
   width: 100%;
-  height: 200vh;
+  height: 100%;
   background-color: rgb(31, 30, 30);
 
   margin-top: 120px;
@@ -20,6 +20,7 @@
 
 .cart-item {
   margin-top: 15px;
+  margin-bottom: 10px;
   border-radius: 6px;
   width: 700px;
   height: 150px;
@@ -135,40 +136,40 @@
 .cart-remove-btn:hover {
   box-shadow: 0 0 5px gray;
 }
-
+/* ==============================================price=========================================== */
 .cart-price-div {
   width: 35%;
-  height: 280px;
+  height: 380px;
   background-color: black;
   position: sticky;
   top: 130px;
   border-radius: 5px;
   margin-top: 35px;
-  margin-bottom: 105px;
+  margin-bottom: 10px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
 }
-.cart-details-div {
+.cart-details-div-box {
+  border-top: 1px solid rgba(128, 128, 128, 0.192);
   width: 100%;
-  height: 40px;
-  border-bottom: 1px solid rgba(128, 128, 128, 0.295);
+  height: 130px;
+  /* background-color: aqua; */
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-around;
 }
-.cart-detals-h3 {
-  font-size: 17px;
-  color: rgba(255, 255, 255, 0.582);
-  margin-left: 20px;
-}
+
 .cart-price-h3 {
-  color: rgba(255, 255, 255, 0.459);
-  font-size: 21px;
+  color: rgba(255, 255, 255, 0.808);
+  font-size: 18px;
   margin-left: 20px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+
+  font-weight: 300;
 }
 .cart-rs-span {
-  color: rgb(192, 255, 184);
+  color: rgba(74, 252, 97, 0.822);
   font-size: 25px;
   margin-left: 20px;
   font-weight: 700;
@@ -184,25 +185,378 @@
   border-radius: 5px;
 }
 
+.cart-order-div {
+  width: 100%;
+  height: 50px;
+  display: flex;
+  /* background-color: aliceblue; */
+  justify-content: space-between;
+  align-items: center;
+}
+.cart-order-btn {
+  width: 120px;
+  height: 35px;
+  border: 0;
+  border-radius: 5px;
+  background-color: rgb(255, 81, 18);
+  color: antiquewhite;
+  margin-right: 20px;
+  font-size: 15px;
+}
+.cart-order-btn:hover {
+  box-shadow: 0 0 5px gray;
+}
+.cart-adress-box {
+  width: 100%;
+  height: 230px;
+  /* background-color: bisque; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+}
+.textInputWrapper {
+  position: relative;
+  width: 250px;
+  margin: 12px 5px;
+  --accent-color: #a3e583;
+}
 
-.cart-order-div{
-    width: 100%;
-    height: 50px;
-    display: flex;
-    /* background-color: aliceblue; */
-    justify-content: space-between;
-    align-items: center;
+.textInputWrapper:before {
+  transition: border-bottom-color 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.42);
 }
-.cart-order-btn{
-    width: 100px;
-    height: 40px;
-    border: 0;
-    border-radius:5px ;
-    background-color: rgb(255, 81, 18);
-    color: antiquewhite;
-    margin-right: 20px;
-    font-size: 15px;
+
+.textInputWrapper:before,
+.textInputWrapper:after {
+  content: "";
+  left: 0;
+  right: 0;
+  position: absolute;
+  pointer-events: none;
+  bottom: -1px;
+  z-index: 4;
+  width: 100%;
 }
-.cart-order-btn:hover{
-    box-shadow: 0 0 5px gray;
+
+.textInputWrapper:focus-within:before {
+  border-bottom: 1px solid var(--accent-color);
+}
+
+.textInputWrapper:before {
+  transition: border-bottom-color 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.42);
+}
+
+.textInputWrapper:focus-within:before {
+  border-bottom: 1px solid var(--accent-color);
+  transform: scaleX(1);
+}
+
+.textInputWrapper:focus-within:after {
+  border-bottom: 2px solid var(--accent-color);
+  transform: scaleX(1);
+}
+
+.textInputWrapper:after {
+  content: "";
+  transform: scaleX(0);
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1) 0ms;
+  will-change: transform;
+  border-bottom: 2px solid var(--accent-color);
+  border-bottom-color: var(--accent-color);
+}
+
+.textInput::placeholder {
+  transition: opacity 250ms cubic-bezier(0, 0, 0.2, 1) 0ms;
+  opacity: 1;
+  user-select: none;
+  color: rgba(255, 255, 255, 0.582);
+}
+
+.textInputWrapper .textInput {
+  border-radius: 5px 5px 0px 0px;
+  box-shadow: 0px 2px 5px rgb(35 35 35 / 30%);
+  max-height: 36px;
+  background-color: #252525;
+  transition-timing-function: cubic-bezier(0.25, 0.8, 0.25, 1);
+  transition-duration: 200ms;
+  transition-property: background-color;
+  color: #e8e8e8;
+  font-size: 14px;
+  font-weight: 500;
+  padding: 12px;
+  width: 100%;
+  border-left: none;
+  border-bottom: none;
+  border-right: none;
+}
+
+.textInputWrapper .textInput:focus,
+.textInputWrapper .textInput:active {
+  outline: none;
+}
+
+.textInputWrapper:focus-within .textInput,
+.textInputWrapper .textInput:focus,
+.textInputWrapper .textInput:active {
+  background-color: #353535;
+}
+
+.textInputWrapper:focus-within .textInput::placeholder {
+  opacity: 0;
+}
+.delvery-adrrss-div {
+  width: 100%;
+  height: 35px;
+  border-bottom: 1px solid rgba(155, 153, 153, 0.226);
+  display: flex;
+  align-items: center;
+}
+.delvery-adrrss-h3 {
+  font-size: 18px;
+  font-weight: 400;
+  color: rgba(255, 255, 255, 0.808);
+  margin-left: 20px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+/* ==============================================empty===================================== */
+
+.no-cart-div {
+  position: absolute;
+  width: 100%;
+  height: 120vh;
+  margin-top: 120px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.no-cart-cntnt-div {
+  width: 100%;
+  height: 557px;
+  background-color: rgb(0, 0, 0);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.empty-div {
+  width: 700px;
+  height: 330px;
+  /* background-color: aliceblue; */
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+.no-cart-img {
+  width: 250px;
+  height: 250px;
+}
+.empyt-h3 {
+  font-size: 40px;
+  font-family: "Times New Roman", Times, serif;
+  font-weight: 700;
+  color: rgb(0, 205, 241);
+}
+.empy-btn {
+  width: 180px;
+  color: aliceblue;
+  background-color: orangered;
+  border: 0;
+  border-radius: 4px;
+  height: 35px;
+}
+.empy-btn:hover {
+  box-shadow: 0 0 5px rgb(204, 205, 206);
+}
+
+/* ======================================CartPopup===================================================== */
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.315);
+  display: flex;
+  justify-content: center;
+  z-index: 100000;
+  align-items: center;
+}
+
+.modal-content {
+  background-color: #00000a;
+  border-radius: 8px;
+  width: 50%;
+  height: 590px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.cart-popup-cmpny-div {
+  width: 100%;
+  height: 70px;
+  background-color: #00000a;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.cart-popup-cmpny-sub1 {
+  height: 100%;
+  width: 73%;
+  /* background-color: #1b3a0b; */
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+.cart-popup-cmpny-name {
+  margin-right: 25px;
+  background: -webkit-linear-gradient(#eee, #44a1df);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-size: 25px;
+  font-weight: 1000;
+  font-family: "Times New Roman", Times, serif;
+}
+.cart-popup-cross {
+  width: 40px;
+  height: 40px;
+  margin-bottom: 45px;
+}
+
+.cart-popup-name-div {
+  width: 100%;
+  height: 100px;
+  background-color: #00000a;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.cart-popup-name {
+  display: flex;
+  color: white;
+  align-items: center;
+  width: 80%;
+  height: 30px;
+  background-color: #00000a;
+}
+
+.cart-popup-name-p {
+  color: red;
+  margin-top: 10px;
+  font-size: 18px;
+  text-align: center;
+  margin-left: 5px;
+}
+
+.cart-popup-items-div {
+  width: 100%;
+  height: 280px;
+  background-color: #00000a;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.cart-popup-sub-items-full-div {
+  width: 80%;
+  height: 100%;
+  background-color: #00000a;
+
+  display: flex;
+  flex-direction: column;
+  border-radius: 5px;
+}
+
+.cart-popup-phone-heading {
+  width: 100%;
+  height: 40px;
+  /* background-color: #0c0c30; */
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  border-bottom: 1px solid rgba(128, 128, 128, 0.192);
+}
+.discription-h3 {
+  font-size: 15px;
+  color: rgba(255, 255, 255, 0.493);
+  margin-right: 35px;
+}
+
+.cart-popup-item-name-div {
+  width: 100%;
+  height: 35px;
+  display: flex;
+  align-items: center;
+  /* background-color: #44a1df; */
+}
+.cart-popup-item-name-h3 {
+  font-size: 15px;
+  text-align: center;
+  color: white;
+  font-weight: 300;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+}
+.cart-popup-item-name-sub-div {
+  width: 250px;
+  height: 100%;
+  /* background-color: #353535; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-bottom: 1px solid rgba(128, 128, 128, 0.205);
+}
+.cart-popup-item-qty {
+  width: 150px;
+  height: 100%;
+  background-color: #00000a;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-bottom: 1px solid rgba(128, 128, 128, 0.178);
+}
+.cart-popup-item-price {
+  width: 170px;
+  height: 100%;
+  background-color: #00000a;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-bottom: 1px solid rgba(128, 128, 128, 0.185);
+}
+
+.cart-popup-total-amount-div {
+  width: 100%;
+  height: 40px;
+  background-color: #00000a;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.cart-popup-total-amount-h3 {
+  font-size: 22px;
+  color: rgb(34, 235, 15);
+}
+.cart-popup-total-amount-h4 {
+  font-size: 22px;
+
+  color: white;
+}
+.cart-popup-order-btn {
+  width: 150px;
+  height: 35px;
+  border: 0;
+  border-radius: 4px;
+
+  background-color: rgb(0, 54, 0);
+  color: rgb(255, 255, 255);
+}
+.cart-popup-order-btn:hover {
+  box-shadow: 0 0 2px gray;
 }
