--- a/src/componants/mobiles/mobiles.css
+++ b/src/componants/mobiles/mobiles.css
@@ -285,7 +285,7 @@
   display: flex;
   align-items: center;
   justify-content: space-around;
-  background-color: rgb(3, 196, 3);
+  background-color: orangered;
   border-radius: 5px;
   margin-right: 20px;
 }
@@ -302,7 +302,7 @@
   font-family: "Times New Roman", Times, serif;
   height: 40px;
   border: 0;
-  background-color: rgb(3, 196, 3);
+  background-color: orangered;
 }
 .about-cart-btn-div:hover {
   box-shadow: 0 0 5px gray;
