--- a/src/componants/home/Home.css
+++ b/src/componants/home/Home.css
@@ -247,7 +247,7 @@
     display: none;overflow-x: hidden;
   }
 
-  .subnav {
+  .subnav,.cart-text {
     display: none;overflow-x: hidden;
   }
 }
