--- a/src/componants/cart-folder/Cart.css
+++ b/src/componants/cart-folder/Cart.css
@@ -378,7 +378,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(255, 255, 255, 0.315);
+  background-color: rgba(12, 12, 12, 0.822);
   display: flex;
   justify-content: center;
   z-index: 100000;
@@ -394,9 +394,10 @@
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
+  box-shadow: 0 0 1px rgb(0, 255, 255);
 }
 .cart-popup-cmpny-div {
-  width: 100%;
+  width: 99%;
   height: 70px;
   background-color: #00000a;
   display: flex;
@@ -485,6 +486,12 @@
   font-size: 15px;
   color: rgba(255, 255, 255, 0.493);
   margin-right: 35px;
+}
+.discription-h4 {
+  font-size: 15px;
+  color: rgba(255, 255, 255, 0.493);
+  margin-right: 20px;
+  margin-left: 15px;
 }
 
 .cart-popup-item-name-div {
