--- a/src/componants/loginpage/Login.css
+++ b/src/componants/loginpage/Login.css
@@ -1,11 +1,11 @@
 .login {
-  margin-left: -510px;
-  width: 1390px;
-  height: 650px;
-  margin-top: -45px;
+  width: 100%;
+  height: 100%;
   background-color: rgba(12, 12, 12, 0.822);
-  position: absolute;
-  z-index: 1000;
+  position: fixed;
+  top: 0;
+  z-index: 100000;
+  left: 0;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -164,24 +164,58 @@
   border: 0;
 }
 
-
-
-
-
 /* -----------------------MEDIAQUERY------------------- */
-@media (max-width:500px){
+@media (max-width: 500px) {
+  .login {
+    overflow: hidden;
+  }
+  .login-box {
+    width: 250px;
+    height: 250px;
+  }
+  .content {
+  }
 
+  .crossbt {
+    width: 20px;
+    height: 20px;
+    margin-top: 7px;
+    margin-left: 20px;
+  }
+  .nav-edu {
+    font-size: 12px;
+  }
+  .logo-cmpny-div {
+    margin-left: 30px;
+    /* background-color: red; */
+  }
 
-.login{
-  /* margin-left: -255px; */
+  #size2 {
+    height: 30px;
+    font-size: 12px;
+  }
+  .checkbox-div {
+    overflow: hidden;
+    /* background-color: red; */
+    width: 120px;
+  }
+  .checkbox {
+    width: 15px;
+    height: 15px;
+  }
+  .checkbox-h6 {
+    font-size: 11px;
+  }
 
-  background-color: #a50f0f;
-  overflow: hidden;
-
-  z-index: 1000;
-
-}
-.login-box{
-  display: none;
-}
+  .login-link {
+    font-size: 8px;
+  }
+  .login-ptag {
+    font-size: 8px;
+  }
+  #bt-1 {
+    width: 120px;
+    height: 30px;
+    font-size: 12px;
+  }
 }
