--- a/src/componants/Desktop-folder/Desktop.css
+++ b/src/componants/Desktop-folder/Desktop.css
@@ -13,3 +13,20 @@
   height: 400px;
   border-radius: 8px;
 }
+/* =================Media================= */
+@media (max-width:500px){
+  .desktop-image-div{
+    /* background-color: aqua; */
+    height: 25vh;
+    margin-top: 80px;
+    overflow: hidden;
+  }
+  .desktop-img {
+    border-radius: 4px;
+  height: 90%;
+  }
+
+
+
+  
+}
